--- a/css/style.css
+++ b/css/style.css
@@ -1184,7 +1184,6 @@ h6 {
   object-fit: contain
 }
 .header__language ul {
-  display: inline-flex;
   align-items: center;
   gap: .25rem;
   flex-direction: row
@@ -1889,14 +1888,16 @@ h6 {
   width: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  opacity: 0;
   position: absolute;
-  transition: all .3s
+  transition: all 1s ease;
+  clip-path: inset(50% round 1.2rem)
 }
 .brands__images img.current {
   opacity: 1;
   position: relative;
-  transition: all .3s
+  transition: all 1s ease;
+  z-index: 2;
+  clip-path: inset(0 round 1.2rem)
 }
 .brands__info .info-brands__content-list {
   max-width: 37.5rem
@@ -2018,6 +2019,9 @@ h6 {
   display: none!important
 }
 @media (min-width:29.99875em) {
+  .header__language ul {
+    display: inline-flex
+  }
   .about-product-features__info-column {
     border-radius: 2.25rem
   }
@@ -2102,8 +2106,8 @@ h6 {
     padding-left: 1.25rem
   }
   .blog__post .post-blog__button {
-    -webkit-transform: translateX(-213px);
-    transform: translateX(-213px)
+    -webkit-transform: translateX(-196px);
+    transform: translateX(-196px)
   }
   .blog__post .post-blog__button .button-primary {
     opacity: 0
@@ -2825,7 +2829,7 @@ h6 {
     color: var(--neutral--100)!important
   }
   .main-products__list {
-    display: none
+    display: none!important
   }
   .main-products__slide {
     padding-bottom: 4.5rem
@@ -2961,6 +2965,7 @@ h6 {
     border-radius: 1.5rem
   }
   .blog__posts {
+    gap: 2.25rem;
     grid-template-columns: repeat(1,1fr)
   }
   .post-content img {
@@ -2992,6 +2997,9 @@ h6 {
   }
 }
 @media (max-width:29.99875em) {
+  .header__language ul {
+    display: flex!important
+  }
   .hero__content-product .product-content__info .info-product__features ul {
     grid-template-columns: 1fr;
     align-items: center
